--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -61,13 +61,13 @@
                                 <exclude reference="Ink-yV-OBI"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="rYL-3U-hb8"/>
                                 <exclude reference="2wm-pB-0zq"/>
                                 <exclude reference="pJV-Is-9IY"/>
                                 <exclude reference="r92-MR-86v"/>
+                                <exclude reference="hwU-xe-grv"/>
                                 <exclude reference="PeB-wM-Xdt"/>
                                 <exclude reference="UDO-SL-pzp"/>
-                                <exclude reference="hwU-xe-grv"/>
-                                <exclude reference="rYL-3U-hb8"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -77,17 +77,18 @@
                                 <include reference="Ink-yV-OBI"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="rYL-3U-hb8"/>
                                 <include reference="2wm-pB-0zq"/>
                                 <include reference="pJV-Is-9IY"/>
                                 <include reference="r92-MR-86v"/>
+                                <include reference="hwU-xe-grv"/>
                                 <include reference="PeB-wM-Xdt"/>
                                 <include reference="UDO-SL-pzp"/>
-                                <include reference="hwU-xe-grv"/>
-                                <include reference="rYL-3U-hb8"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
+                        <outlet property="recordButton" destination="FVL-Dm-gOH" id="H6H-W3-IWb"/>
                         <outlet property="recordingInProgress" destination="da0-5f-oqS" id="ELC-6l-KeL"/>
                         <outlet property="stopButton" destination="Ink-yV-OBI" id="vmo-me-GWc"/>
                     </connections>
