--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9052" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9052" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0eR-gN-mhi">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9040"/>
     </dependencies>
@@ -40,6 +40,7 @@
                                 </variation>
                                 <connections>
                                     <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NI7-PI-2le"/>
+                                    <segue destination="D6w-lK-iQu" kind="show" id="wQK-8K-Zvd"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -87,6 +88,7 @@
                             </mask>
                         </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="bcg-vv-g8H"/>
                     <connections>
                         <outlet property="recordButton" destination="FVL-Dm-gOH" id="H6H-W3-IWb"/>
                         <outlet property="recordingInProgress" destination="da0-5f-oqS" id="ELC-6l-KeL"/>
@@ -95,6 +97,44 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1351.5" y="973"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="HRs-Y1-D6d">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0eR-gN-mhi" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Svl-dE-0qe">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="lfT-AJ-g4D"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iWt-y4-oQD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="354" y="973"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="eY6-Di-e5K">
+            <objects>
+                <viewController id="D6w-lK-iQu" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vjb-ea-cRQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="nxN-Kh-fWC"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Seg-aA-FyV">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CDf-q7-04u" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2317.5" y="973"/>
         </scene>
     </scenes>
     <resources>
